--- a/HaierOven/OrderAlertView.xib
+++ b/HaierOven/OrderAlertView.xib
@@ -10,19 +10,20 @@
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
+            <string>FZLTHJW--GB1-0</string>
         </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="AF9-yW-uID" customClass="OrderAlertView">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="258"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lXw-Ve-ZMB">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="45"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设置预约开始时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYK-Mb-hvK">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设置预约结束时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYK-Mb-hvK">
                             <rect key="frame" x="25" y="4" width="267" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="mGt-xl-fPL"/>
@@ -53,13 +54,13 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tk.png" translatesAutoresizingMaskIntoConstraints="NO" id="TM6-Sx-nDM" customClass="tk">
-                    <rect key="frame" x="0.0" y="218" width="300" height="40"/>
+                    <rect key="frame" x="0.0" y="260" width="300" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="dsg-q1-Elc"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nuo-nG-USu">
-                    <rect key="frame" x="0.0" y="218" width="150" height="40"/>
+                    <rect key="frame" x="0.0" y="260" width="150" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="NZ5-ly-HxP"/>
                     </constraints>
@@ -72,7 +73,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ykW-U1-klO">
-                    <rect key="frame" x="150" y="218" width="150" height="40"/>
+                    <rect key="frame" x="150" y="260" width="150" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="e7H-k8-H1P"/>
                     </constraints>
@@ -85,25 +86,33 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="烤箱将在" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2o-Th-HeL">
-                    <rect key="frame" x="8" y="118" width="64" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="d67-vO-vcg"/>
-                    </constraints>
+                    <rect key="frame" x="33" y="226" width="56" height="16.5"/>
                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="结束工作" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NEM-b8-ah1">
-                    <rect key="frame" x="233" y="118" width="59" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="dAc-F1-yIQ"/>
-                    </constraints>
+                    <rect key="frame" x="209.5" y="226.5" width="56" height="16.5"/>
                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="5ce-UA-MUC">
-                    <rect key="frame" x="75" y="48" width="150" height="162"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03月05日 19:30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRh-qa-uac">
+                    <rect key="frame" x="97" y="226" width="104.5" height="16.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="160" id="XcY-h1-iBD"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="14"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="XcY-h1-iBD"/>
+                        </mask>
+                    </variation>
+                </label>
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="5ce-UA-MUC">
+                    <rect key="frame" x="0.0" y="53" width="300" height="162"/>
                     <date key="date" timeIntervalSinceReferenceDate="443513271.59430498">
                         <!--2015-01-21 06:07:51 +0000-->
                     </date>
@@ -114,29 +123,29 @@
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="F2o-Th-HeL" secondAttribute="centerY" id="4y7-q2-mAP"/>
                 <constraint firstItem="5ce-UA-MUC" firstAttribute="top" secondItem="lXw-Ve-ZMB" secondAttribute="bottom" constant="9" id="7LS-9k-aep"/>
+                <constraint firstItem="FRh-qa-uac" firstAttribute="leading" secondItem="F2o-Th-HeL" secondAttribute="trailing" constant="8" id="7Qh-NB-Krx"/>
                 <constraint firstAttribute="trailing" secondItem="lXw-Ve-ZMB" secondAttribute="trailing" id="9av-ze-vQf"/>
                 <constraint firstAttribute="trailing" secondItem="ykW-U1-klO" secondAttribute="trailing" id="9de-43-VhS"/>
+                <constraint firstItem="NEM-b8-ah1" firstAttribute="leading" secondItem="FRh-qa-uac" secondAttribute="trailing" constant="8" id="A6G-hW-JrG"/>
                 <constraint firstItem="ykW-U1-klO" firstAttribute="leading" secondItem="Nuo-nG-USu" secondAttribute="trailing" id="AJM-gx-1gg"/>
+                <constraint firstItem="FRh-qa-uac" firstAttribute="top" secondItem="5ce-UA-MUC" secondAttribute="bottom" constant="11" id="Bsn-Zq-8t0"/>
+                <constraint firstAttribute="centerX" secondItem="FRh-qa-uac" secondAttribute="centerX" id="E9Z-Br-sOg"/>
                 <constraint firstItem="ykW-U1-klO" firstAttribute="width" secondItem="Nuo-nG-USu" secondAttribute="width" id="Gae-bH-cbW"/>
-                <constraint firstItem="NEM-b8-ah1" firstAttribute="leading" secondItem="5ce-UA-MUC" secondAttribute="trailing" constant="8" id="IAS-Dr-7tk"/>
                 <constraint firstItem="Nuo-nG-USu" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" id="OJc-t1-zcy"/>
-                <constraint firstItem="5ce-UA-MUC" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" constant="75" id="P16-S4-LDW"/>
+                <constraint firstItem="5ce-UA-MUC" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" id="P16-S4-LDW"/>
+                <constraint firstItem="FRh-qa-uac" firstAttribute="centerY" secondItem="NEM-b8-ah1" secondAttribute="centerY" id="THq-Yg-dT9"/>
                 <constraint firstAttribute="bottom" secondItem="TM6-Sx-nDM" secondAttribute="bottom" id="aG7-UH-90Z"/>
-                <constraint firstAttribute="trailing" secondItem="5ce-UA-MUC" secondAttribute="trailing" constant="75" id="bbo-C9-9um"/>
+                <constraint firstAttribute="trailing" secondItem="5ce-UA-MUC" secondAttribute="trailing" id="bbo-C9-9um"/>
                 <constraint firstItem="lXw-Ve-ZMB" firstAttribute="top" secondItem="AF9-yW-uID" secondAttribute="top" id="cgj-oe-0B6"/>
-                <constraint firstAttribute="centerY" secondItem="5ce-UA-MUC" secondAttribute="centerY" id="f5L-ez-KfT"/>
+                <constraint firstAttribute="centerY" secondItem="5ce-UA-MUC" secondAttribute="centerY" constant="16" id="f5L-ez-KfT"/>
+                <constraint firstItem="FRh-qa-uac" firstAttribute="centerY" secondItem="F2o-Th-HeL" secondAttribute="centerY" id="f9x-xp-EoQ"/>
                 <constraint firstItem="TM6-Sx-nDM" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" id="gVm-qb-5zu"/>
-                <constraint firstAttribute="trailing" secondItem="NEM-b8-ah1" secondAttribute="trailing" constant="8" id="gh0-55-UCo"/>
                 <constraint firstItem="ykW-U1-klO" firstAttribute="leading" secondItem="Nuo-nG-USu" secondAttribute="trailing" id="ifG-qG-q7q"/>
                 <constraint firstItem="lXw-Ve-ZMB" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" id="jSx-Sm-GRV"/>
                 <constraint firstAttribute="bottom" secondItem="Nuo-nG-USu" secondAttribute="bottom" id="jhz-dW-lOC"/>
                 <constraint firstAttribute="trailing" secondItem="TM6-Sx-nDM" secondAttribute="trailing" id="k5G-lz-ZXv"/>
-                <constraint firstItem="F2o-Th-HeL" firstAttribute="leading" secondItem="AF9-yW-uID" secondAttribute="leading" constant="8" id="q1H-6L-Iud"/>
-                <constraint firstItem="ykW-U1-klO" firstAttribute="top" secondItem="5ce-UA-MUC" secondAttribute="bottom" constant="14" id="tmt-Jt-kue"/>
-                <constraint firstItem="5ce-UA-MUC" firstAttribute="leading" secondItem="F2o-Th-HeL" secondAttribute="trailing" constant="3" id="utk-E1-Rka"/>
-                <constraint firstAttribute="centerY" secondItem="NEM-b8-ah1" secondAttribute="centerY" id="whf-cq-Ura"/>
+                <constraint firstItem="ykW-U1-klO" firstAttribute="top" secondItem="5ce-UA-MUC" secondAttribute="bottom" constant="45" id="tmt-Jt-kue"/>
                 <constraint firstAttribute="bottom" secondItem="ykW-U1-klO" secondAttribute="bottom" id="y84-XM-MT9"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -148,8 +157,9 @@
             </variation>
             <connections>
                 <outlet property="datepicker" destination="5ce-UA-MUC" id="5bC-vB-wG3"/>
+                <outlet property="selectedTimeLabel" destination="FRh-qa-uac" id="NB2-eI-3zt"/>
             </connections>
-            <point key="canvasLocation" x="213" y="196"/>
+            <point key="canvasLocation" x="213" y="172"/>
         </view>
     </objects>
     <resources>
