--- a/HaierOven/SecDeviceTableViewCell.xib
+++ b/HaierOven/SecDeviceTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SecDeviceTableViewCell" id="KGk-i7-Jjw" customClass="SecDeviceTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Device table view cell" id="KGk-i7-Jjw" customClass="SecDeviceTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,24 +29,28 @@
                         <color key="textColor" red="0.95294117649999999" green="0.64705882349999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jianjing.png" translatesAutoresizingMaskIntoConstraints="NO" id="j4v-fv-agj">
-                        <rect key="frame" x="166" y="12" width="19" height="19"/>
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gantan.png" translatesAutoresizingMaskIntoConstraints="NO" id="j4v-fv-agj">
+                        <rect key="frame" x="214" y="7" width="30" height="30"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="19" id="Ewi-cm-1fI"/>
-                            <constraint firstAttribute="width" constant="19" id="ztz-iB-biP"/>
+                            <constraint firstAttribute="height" constant="30" id="Ewi-cm-1fI"/>
+                            <constraint firstAttribute="width" constant="30" id="ztz-iB-biP"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="c0n-F9-cEJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="0wV-7V-R5Q"/>
-                    <constraint firstItem="j4v-fv-agj" firstAttribute="leading" secondItem="c0n-F9-cEJ" secondAttribute="trailing" constant="52" id="6eh-0c-oxa"/>
+                    <constraint firstItem="j4v-fv-agj" firstAttribute="leading" secondItem="c0n-F9-cEJ" secondAttribute="trailing" constant="100" id="6eh-0c-oxa"/>
                     <constraint firstAttribute="centerY" secondItem="j4v-fv-agj" secondAttribute="centerY" id="VsF-Wc-lzB"/>
                     <constraint firstAttribute="centerY" secondItem="c0n-F9-cEJ" secondAttribute="centerY" id="XZt-NT-wpe"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="infoImageView" destination="j4v-fv-agj" id="URJ-L7-xK3"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="jianjing.png" width="19" height="19"/>
+        <image name="gantan.png" width="26" height="26"/>
     </resources>
 </document>
