--- a/HaierOven/Cookbook/Views/Liukang.storyboard
+++ b/HaierOven/Cookbook/Views/Liukang.storyboard
@@ -254,9 +254,10 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="qKe-Om-BRx">
                                 <rect key="frame" x="16" y="7" width="26" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="back.png">
+                                <state key="normal" image="back2.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <state key="selected" image="back.png"/>
                                 <connections>
                                     <action selector="back:" destination="nCF-pj-vsv" eventType="touchUpInside" id="wvm-gC-gpl"/>
                                 </connections>
@@ -293,6 +294,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="authorityButton" destination="2ST-Cq-DTt" id="ZUa-MM-6ck"/>
+                        <outlet property="backIcon" destination="qKe-Om-BRx" id="eH0-wg-OUr"/>
                         <outlet property="cookbookDescCell" destination="e9d-yT-7My" id="tji-Z8-V3n"/>
                         <outlet property="cookbookDescLabel" destination="hKg-OC-Whd" id="HNj-fj-KFd"/>
                         <outlet property="cookbookDetailCell" destination="smK-F0-EMr" id="B8x-No-8Td"/>
@@ -340,6 +342,7 @@
     </scenes>
     <resources>
         <image name="back.png" width="26" height="26"/>
+        <image name="back2.png" width="21" height="21"/>
         <image name="cookbook_list_item_bg_default.png" width="274" height="206"/>
         <image name="default_avatar.png" width="127" height="127"/>
         <image name="icon_gfcp_n.png" width="113" height="30"/>
