从菜谱详情跳转到烤箱控制面板，直接开始烘焙。

--- a/HaierOven/BakeGroupAdviceCell.xib
+++ b/HaierOven/BakeGroupAdviceCell.xib
@@ -69,6 +69,9 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="烘培厨神、香格里拉酒店西餐主厨" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sh6-oN-393">
                         <rect key="frame" x="76" y="36" width="148" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="28" id="h8b-Af-MLQ"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="12"/>
                         <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
