--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -2432,7 +2432,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bKh-EI-LgO" id="QUQ-OW-AHG">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jifen2.png" translatesAutoresizingMaskIntoConstraints="NO" id="X1e-oV-VaV">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jifen_3.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="X1e-oV-VaV">
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
                                                 </imageView>
                                             </subviews>
@@ -2787,7 +2787,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="RMU-wm-B1g">
-                            <rect key="frame" x="96" y="6" width="128" height="33"/>
+                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设置" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbL-ux-EAS">
@@ -2806,6 +2806,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="logoutButton" destination="8g9-Pe-tUi" id="1Tl-nQ-rlN"/>
+                        <outlet property="versionButton" destination="XWO-Hw-T19" id="TRF-1C-sZE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MCb-SY-i9B" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3008,7 +3009,7 @@
                     <navigationItem key="navigationItem" id="pmg-s3-JMG">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="gmz-QB-MH0">
-                            <rect key="frame" x="96" y="6" width="128" height="33"/>
+                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="反馈意见" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tR1-TW-yXb">
@@ -7042,7 +7043,7 @@
         <image name="icon_wzd.png" width="101" height="100"/>
         <image name="icon_wzd_text.png" width="120" height="26"/>
         <image name="jianjing.png" width="19" height="19"/>
-        <image name="jifen2.png" width="720" height="1716"/>
+        <image name="jifen_3.jpg" width="720" height="1460"/>
         <image name="kaiji.png" width="26" height="26"/>
         <image name="kaoxiang.png" width="162" height="162"/>
         <image name="l2.png" width="720" height="1"/>
